# CIKM

./: .env.example  .gitignore  AGENT.md  README.md  pyproject.toml  test.py
.tmp_related_repos/RRec/: .gitignore  README.md  launch_train.sh  paths.py  preprocess.py  requirements.txt  train.py
.tmp_related_repos/ReRec/: .gitignore  README.md
configs/: README.md
configs/data/: amazon_food.yaml  amazon_food_pilot.yaml
configs/eval/: faithfulness_counterfactual.yaml  offline.yaml
configs/inference/: answer_only.yaml  free_form_cot.yaml
configs/model/: base_llm.yaml  qwen2_5_1_5b_instruct.yaml
data/: README.md
docs/: faithrec_architecture.md  faithrec_eval_protocol.md  faithrec_prompt_contract.md  faithrec_rl_training.md  reasoning_schema.md  topology_prompt_templates.md  toporec_problem_method.md  training_design.md
notebooks/: README.md
outputs/: README.md
scripts/: README.md  build_amazon_food_pilot.py  build_baseline_predictions.py  build_baseline_prompts.py  calibrate_recbench_faithrl.py  check_recbench_rl_data.py  check_rerank_dataset.py  export_rerank_prompts.py  prepare_recbench.py  process_amazon_food.py  run_llm_inference.py  run_local_inference.py  run_offline_verifier.py
teacher/: __init__.py  build_sft.py
tests/: README.md  conftest.py  test_amazon_food_preprocessing.py  test_baseline_prediction_export.py  test_counterfactual_eval.py  test_data_schema_and_candidates.py  test_faithrec_core.py  test_inference_contracts.py  test_offline_verifier.py  test_recbench_pipeline.py  test_trace_rec_v1_graph.py  test_verifier_and_rewards.py
(+106 files in other folders)
