[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "llm4rec-structured-reasoning"
version = "0.1.0"
description = "Research workspace for structured reasoning in LLM-based generative recommendation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pyyaml",
  "rich",
  "typer",
]

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "ruff",
]
research = [
  "numpy",
  "pandas",
  "scikit-learn",
  "tqdm",
]
llm = [
  "accelerate",
  "datasets",
  "einops",
  "peft",
  "sentencepiece",
  "torch",
  "transformers",
  "trl",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
