[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "faithrec-recbench"
version = "0.1.0"
description = "Slim RecBench data, teacher SFT, and verl reward utilities."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
]
data = [
  "pandas",
  "pyarrow",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["src/faithrec"]
